DPO-4701 fix for transaction in ScheduleService (#164)
* DPO-4701 fix for transaction in ScheduleService

* DPO-4701 log version for train